# i-can-not-speak

./: .gitignore  README.md  README_ZH_CN.md  pyproject.toml
src/: main.py
src/i_can_not_speak/: __init__.py  app.py  sapi.py  service.py
